--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools twine wheel
-    - name: Build release artefacts
+    - name: Build release artifacts
       run: |
         python setup.py sdist bdist_wheel
         python -m twine check dist/*
